# solaris-packet-protocol

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.backup  CROSS_COMPILATION.md  Doxyfile  README.md  build.sh  spp.h
cmake/: spp-config.cmake.in
cmake/toolchains/: arm-linux-gnueabihf.cmake  esp32s3.cmake  riscv64-linux-gnu.cmake
core/: CMakeLists.txt  README.md  core.c  core.h  error.c  error.h  macros.h  packet.h  returnTypes.h  returntypes.h  types.h
docs/: custom.css  mainpage.md
docs/html/: annotated.html  classes.html  dir_000000_000009.html  dir_000001_000000.html  dir_000002_000006.html  dir_000003_000000.html  dir_000003_000009.html  dir_000004_000008.html  dir_000005_000006.html  dir_000007_000008.html  dir_000008_000000.html  dir_000010_000000.html  dir_056ec8f0377ddc4293192cbc6b19c99c.html  dir_056ec8f0377ddc4293192cbc6b19c99c_dep.map  dir_056ec8f0377ddc4293192cbc6b19c99c_dep.md5  dir_371ec092f6df28856f1ba13f6a56e338.html  dir_371ec092f6df28856f1ba13f6a56e338_dep.map  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4270bfced15e0e73154b13468c7c9ad9_dep.map  dir_4270bfced15e0e73154b13468c7c9ad9_dep.md5  dir_52c912f73dac9c4c0e442232e1b2bd80.html  dir_52c912f73dac9c4c0e442232e1b2bd80_dep.map  dir_52c912f73dac9c4c0e442232e1b2bd80_dep.md5  dir_82d5354e99b98d915ec1c4a815fbd4c2.html  dir_82d5354e99b98d915ec1c4a815fbd4c2_dep.map  dir_82d5354e99b98d915ec1c4a815fbd4c2_dep.md5  dir_a0326d5e8df43abe4603871fa1f20a0c.html  dir_a0326d5e8df43abe4603871fa1f20a0c_dep.map  dir_a0326d5e8df43abe4603871fa1f20a0c_dep.md5  dir_a603b78c341676d87724e2c51359c5e6.html  dir_a603b78c341676d87724e2c51359c5e6_dep.map  dir_a603b78c341676d87724e2c51359c5e6_dep.md5  dir_b1e20d8abe2d8582686f519046a1c1eb.html  dir_b1e20d8abe2d8582686f519046a1c1eb_dep.map  dir_b1e20d8abe2d8582686f519046a1c1eb_dep.md5  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  dir_e47a1e49bd437fe0ea0b1da4f1984ad3.html  dir_e47a1e49bd437fe0ea0b1da4f1984ad3_dep.map  (+18 more)
docs/html/d0/d14/: spi_8c__incl.map  spi_8c__incl.md5
docs/html/d0/dac/: esp32__spi_8c__incl.map  esp32__spi_8c__incl.md5
docs/html/d0/df0/: structspp__packet__t-members.html
docs/html/da/d00/: spi_8c.html  (+1 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_2.js  files_4.js  files_5.js  files_6.js  files_8.js  files_9.js  (+28 more)
docs/latex/: dir_371ec092f6df28856f1ba13f6a56e338.tex  dir_371ec092f6df28856f1ba13f6a56e338_dep.md5  dir_52c912f73dac9c4c0e442232e1b2bd80.tex  dir_b1e20d8abe2d8582686f519046a1c1eb.tex  files.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
examples/: CMakeLists.txt  CMakeLists_example.txt  README.md  basic_usage.c
examples/hal/: CMakeLists.txt
examples/hal/esp32spi/: CMakeLists.txt  esp32_spi.c  esp32_spi.h
examples/osal/: CMakeLists.txt
examples/osal/freertos/: CMakeLists.txt  freertos_osal_impl.c  freertos_osal_impl.h
hal/: CMakeLists.txt  README.md  dispatch.c  gpio.h  port.h  spi.h  storage.h  time.h
hal/esp32/: spi_esp32.c
hal/esp32/include/: macros_esp.h
hal/gpio/: gpio.h
hal/spi/: CMakeLists.txt  spi.c  spi.h
hal/storage/: storage.h
include/spp/: spp.h
include/spp/core/: core.h  error.h  packet.h  returntypes.h  types.h  version.h
include/spp/hal/: gpio.h  port.h  spi.h  storage.h
include/spp/osal/: event.h  mutex.h  port.h  queue.h  task.h
include/spp/services/: bmp390.h  databank.h  db_flow.h  log.h  service.h
include/spp/util/: crc.h  macros.h  structof.h
osal/: CMakeLists.txt  README.md  event.h  eventgroups.c  eventgroups.h  mutex.c  mutex.h  osal.c  osal.h  port.h  queue.c  queue.h  semaphore.c  semaphore.h  task.c  task.h  types.h
ports/: README.md
ports/baremetal/osal/: osal_baremetal.c
ports/freertos/osal/: osal_freertos.c
ports/hal/esp32/: halEsp32.c  hal_esp32.c  hal_esp32_baremetal.c  macrosEsp32.h
ports/hal/stub/: halStub.c  hal_stub.c
ports/osal/baremetal/: osal_baremetal.c
ports/osal/freertos/: osal_freertos.c
ports/osal/posix/: osal_posix.c
ports/posix/hal/: hal_stub.c
ports/posix/osal/: osal_posix.c
services/: CMakeLists.txt  README.md  service.c  service.h  spp_log.c  spp_log.h
services/bmp390/: README.md  bmp390.c  bmp390.h
services/bmp390/src/: bmp390_service.c
services/checksum/: checksum.h  crc16.c
services/databank/: CMakeLists.txt  README.md  databank.c  databank.h
services/datalogger/: README.md  datalogger.c  datalogger.h
services/datalogger/src/: datalogger_service.c
services/datapool/: datapool.c  datapool.h
services/db_flow/: README.md  db_flow.c  db_flow.h
services/icm20948/: README.md  icm20948.c  icm20948.h
services/icm20948/src/: icm20948_service.c
services/kalman/: kalman.c  kalman.h
services/log/: README.md  log.c  log.h
services/logging/: CMakeLists.txt  spp_log.c  spp_log.h
services/pubsub/: pubsub.c  pubsub.h
services/sx1261/: sx1261.c  sx1261.h
src/core/: core.c
src/hal/: hal_dispatch.c
src/osal/: osal_dispatch.c
src/services/: service.c
src/services/databank/: databank.c
src/services/db_flow/: db_flow.c
src/services/log/: log.c
src/util/: crc.c
tests/: README.md  helpers.h  mocks.c  run_all_tests.c
tests/core/: test_core.c
tests/services/: services_register_test.c  test_service.c
tests/services/databank/: test_databank.c
tests/services/db_flow/: test_db_flow.c
tests/services/kalman/: test_kalman.c
tests/services/log/: test_log.c
tests/services/pubsub/: test_pubsub.c
tests/services/sx1261/: sx1261_init_test.c
tests/unit/: test_core.c  test_crc.c  test_databank.c  test_db_flow.c  test_helpers.h  test_log.c  test_service.c
tests/util/: test_crc.c
util/: README.md  crc.c  crc.h  macros.h
(+159 files in other folders)
